--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,9 @@
 font-family: 'Josefin Sans', sans-serif;
 font-family: 'Montserrat', sans-serif;
 -------------------------------------------------- */
+
+/*===================== Global style ====================*/
+
 html {
   position: relative;
   min-height: 100%;
@@ -11,6 +14,8 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
   font-family: 'Josefin Sans', sans-serif;
+  color: #ffe19c !important;
+  background-color: #3b3936 !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,62 +27,92 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #291C1A;
+  height: 70px;
+  background: url("../images/navbar.png") repeat-x;
+
+  margin-top: 20px;
 }
 
 body > .container {
-  padding: 400px 15px 0;
+  
   font-family: 'Josefin Sans', sans-serif;
 }
 
+
+
+/*====================== Content Container ======================*/
+div.container.content {
+  position: relative;
+  top: -100px;
+  min-height: 600px;
+  background-image: url(../images/BFAC---T-Shirt.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 50%;
+}
+
+.content h1 {
+
+}
+
+
+/*====================== Navigation and header ===================*/
+
 nav.navbar {
-  background: #BBBCC5;
-  border: none;
+  background: url("../images/navbar.png") repeat-x;
+  height: 60px;
 }
 
 img#skyline {
-  position: absolute;
   width: 100%;
-  height: 550px;
-  z-index: -9999
-}
-
-.brand {
-  position: absolute;
-  left: 2%;  
-  top: 10%;
-  height: 100px;
+  margin-top: 60px;
+  margin-left: auto;  
+  margin-right: auto;
 }
 
 #navbar ul {
-  background: #291C1A;
+  background: hsl(8, 22%, 13%);
   border-radius: 10px;
-  margin-top: 3%;
+  margin-top: 3px;
+  border: 1px solid #F0AD4E;
+}
+
+#navbar ul li img {
+  border-radius: 50%;
 
 }
 
 #navbar ul a {
-  color: #9ea0aa;
-  font-size: 1.3em;
+  font-size: 1em;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
 }
 
-#navbar li.active {
+#navbar li a:first-child {
   border-radius: 10px;
 }
 
-#navbar ul a:hover {
-  color: #728ea4;
-}
+
+
+ul.dropdown-menu li a {
+  color: #ffe19c !important;
+  }
+
+ul.dropdown-menu li a:hover {
+  color: #3b3936 !important;
+  }
 
 a.dropdown-toggle {
   border-radius: 10px;
 }
 
+a#active1 {
+  background: #0A0706;
+}
+
 .footer p {
-  color: #F0AD4E;
+  color: #2e2e2e;
+  font-weight: bold;
   margin-top: 20px;
   text-align: center;
 }
@@ -99,22 +134,64 @@ a.dropdown-toggle {
 }
 
 .footer-logos {
-  margin: 0;
+  margin-top: 4px;
   box-sizing: border-box;
 }
 
 .social-logo-li {
-  margin: 3px 10px 0 10px;
+  margin: 0 10px 0 10px;
   display: inline-block;
 }
 
 .social-logo-li img {
-  width: 55px;
-  
+  width: 55px;  
 }
 
 .social-logo-li:first-child img {
-  width: 80px;
-  
+  position: relative;
+  top: -4px;
+  width: 70px;
 
+}
+
+/*=================== Contact form ===================*/
+
+
+#contactform {  
+  padding: 0 40px 20px 40px;    
+  text-align: center;
+}
+
+#contactform label {
+  margin-top: 20px;
+  font-size: 1.5em;
+}
+
+#contactform input {
+  font-size: 1.5em;
+  border-radius: 10px;
+  text-align: center;
+  width: 90%;
+}
+
+#contactform textarea {
+  font-size: 1.5em;
+  border-radius: 10px;
+  width: 90%;
+}
+
+#submit {
+  font-size: 1.5em;
+  border-radius: 10px;
+  margin-top: 20px;  
+  font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
+}
+
+#submit:hover {
+  box-shadow: 0 0 10px #013768;
+}
+
+#submit:active {
+  box-shadow: inset 0 0 10px #013768;
 }
